# distributed_systems_t1

./: .gitignore  README.md  main.py  publish.py  pubsub_server.py  pyproject.toml  requisitos.md  zap
whatsapp/adapters/: controller.py  middleware.py  strategies.py
whatsapp/app/: use_cases.py
whatsapp/domain/: entities.py
whatsapp/main/: prompt.py
